src/test/ui/autoderef-full-lval.stderr
error[E0369]: cannot add `std::boxed::Box<isize>` to `std::boxed::Box<isize>`
  --> $DIR/autoderef-full-lval.rs:15:24
   |
LL |     let z: isize = a.x + b.y;
   |                    --- ^ --- std::boxed::Box<isize>
   |                    |
   |                    std::boxed::Box<isize>

error[E0369]: cannot add `std::boxed::Box<isize>` to `std::boxed::Box<isize>`
  --> $DIR/autoderef-full-lval.rs:21:33
   |
LL |     let answer: isize = forty.a + two.a;
   |                         ------- ^ ----- std::boxed::Box<isize>
   |                         |
   |                         std::boxed::Box<isize>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
